--- a/src/ClientComponents/Home/index.css
+++ b/src/ClientComponents/Home/index.css
@@ -16,21 +16,21 @@
 }
 
 .carousel-image-1 {
-    background-image: url("../../assests/mobileCarousel1.jpg");
+    background-image: url("../../assests/carousel1.jpg");
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment: fixed;
 }
 
 .carousel-image-2 {
-    background-image: url("../../assests/mobileCarousel2.jpg");
+    background-image: url("../../assests/carousel2.jpg");
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment: fixed;
 }
 
 .carousel-image-3 {
-    background-image: url("../../assests/mobileCarousel3.jpg");
+    background-image: url("../../assests/carousel3.jpg");
     background-size:cover;
     background-repeat:no-repeat;
     background-attachment: fixed;
